--- a/src/components/TopButtons.scss
+++ b/src/components/TopButtons.scss
@@ -48,6 +48,10 @@
   fill: var(--ion-color-primary-contrast);
 }
 
+.scene-mode-icon-svg-ios {
+  background: var(--ion-color-primary);
+}
+
 .help-swiper {
   .swiper-pagination {
     .swiper-pagination-bullet {
